# ib_insync_docs

./: DEDUP_SUMMARY.md  MIGRATION.md  PYRAMID_INDEX.md  README.md  changelog.md  ib.md  ib_orders_reference.md  index_cleaned.md  notebooks-guide.md  process_index_v2.py  process_index_v3.py
agent/: README.md
dedup/: .flake8  .gitignore  AGENT_ARCHITECTURE.md  ANALYSIS.md  CHANGES.md  CODING_STANDARDS.md  GPU_SETUP.md  Makefile  README.md  TODO.md  config.yaml  config.yaml.example  mypy.ini  pyproject.toml  requirements.txt
dedup/outputs/pyramid_index/: README.md  REVIEW.md  apex_alpha.json  apex_popular.json  tag_index.json  tier_a3_edge.json
dedup/scripts/: 01_extract.py  04_merge.py  build_pyramid_output.py  run_all.py
dedup/src/: models.py
dedup_new/: .env.example  .gitignore  AGENT_ARCHITECTURE.md  DEDUP_ARCHITECTURE.md  Dedup_arch.md  PIPELINE_COMPLETE.md  PYRAMID_STRUCTURE.md  PYRIMID_DEDUP_UPDATED.md  QUICKSTART.md  README.md  README_MASTER.md  RESULTS_SUMMARY.md  THREE_LAYER_ARCHITECTURE.md  config.yaml  requirements.txt  testing_TODO.md
dedup_new/outputs_comparison/: COMPARISON_MASTER.md
dedup_new/scripts/: 02_embed.py  03_cluster.py  05_build.py  build_confirmed_db.py  run_dedup.py  test_api.py  (+2 more)
docs/: IB_DATA_LIMITS_MINI.md  IB_limits.md  PROCESSING_REPORT.md  README.md  ib.md  ib_advanced_patterns.md  ib_complete_reference.md  ib_data_reference.md  ib_insync_complete_guide.md  index.md  pdf_extract.md  recipes.md
ingest/: .gitkeep  README.md  metadata.yaml
inject/: README.md
processing/: index_cleaned.json
scripts/: process_index.py
(+30 files in other folders)
